[package]
name = "ptpull"
version = "0.1.0"
edition = "2024"
description = "WiFi camera photo transfer via DLNA/UPnP"
license = "MIT"

[lib]
name = "ptpull"
path = "src/lib.rs"

[[bin]]
name = "ptpull"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
roxmltree = "0.20"
anyhow = "1"
dirs = "6"
